--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,25 +17,25 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-10.15
+          - os: macos-12.3
             tag: n5.0.1
     steps:
       - name: Checkin
         id: checkin
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Clone FFmpeg
-        shell: pwsh
-        run: |
-          git clone git@github.com:FFmpeg/FFmpeg.git ffmpeg
-          cd ffmpeg
-          git checkout ${{ matrix.tag }}
+        uses: actions/checkout@v3
+        with:
+          repository: 'FFmpeg/FFmpeg'
+          ref: ${{ matrix.tag }}
+          path: 'ffmpeg'
       - name: Build project
         id: build
         shell: pwsh
         run: |
           python3 make_compile.py --dir ffmpeg
           python3 make_universal.py --dir ffmpeg
-          python3 package.py --dir ffmpeg --tag n5.0.1
+          python3 package.py --dir ffmpeg --tag ${{ matrix.tag }}
       - uses: actions/upload-artifact@v2
         with:
           name: FFmpeg-${{ matrix.tag }}
