--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           brew install nasm
-      - name: Checkin
-        id: checkin
+      - name: CheckOut
+        id: checkout
         uses: actions/checkout@v3
       - name: Clone FFmpeg
         uses: actions/checkout@v3
@@ -39,9 +39,9 @@ jobs:
         id: build
         shell: pwsh
         run: |
-          python3 make_compile.py --dir ffmpeg
-          python3 make_universal.py --dir ffmpeg
-          python3 package.py --dir ffmpeg --tag ${{ matrix.tag }}
+          python3 make_compile.py --dir /Library/FFmpeg
+          python3 make_universal.py --dir /Library/FFmpeg
+          python3 package.py --dir /Library/FFmpeg --tag ${{ matrix.tag }}
       - uses: actions/upload-artifact@v2
         with:
           name: FFmpeg-${{ matrix.tag }}
