--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
         id: build
         shell: pwsh
         run: |
+          mkdir /Library/FFmpeg/
           python3 make_compile.py --dir /Library/FFmpeg
           python3 make_universal.py --dir /Library/FFmpeg
           python3 package.py --dir /Library/FFmpeg --tag ${{ matrix.tag }}
