rename compile directory

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,9 @@ jobs:
         id: build
         shell: pwsh
         run: |
-          mkdir ~/FFmpeg/
-          python3 make_compile.py --dir ~/FFmpeg/
-          python3 make_universal.py --dir ~/FFmpeg/
-          python3 package.py --dir ~/FFmpeg/ --tag ${{ matrix.tag }}
+          python3 make_compile.py --dir ~/ffmpeg/
+          python3 make_universal.py --dir ~/ffmpeg/
+          python3 package.py --dir ~/ffmpeg/ --tag ${{ matrix.tag }}
       - uses: actions/upload-artifact@v2
         with:
           name: FFmpeg-${{ matrix.tag }}
