--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,21 +20,30 @@ jobs:
           - os: macos-11
             tag: n5.0.1
     steps:
+      - name: CleanOldArtifact
+        uses: kolpav/purge-artifacts-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          expire-in: 15days
+
       - name: Install Dependence
         id: install-dependence
         shell: pwsh
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           brew install nasm
+
       - name: CheckOut
         id: checkout
         uses: actions/checkout@v3
+
       - name: Clone FFmpeg
         uses: actions/checkout@v3
         with:
           repository: 'FFmpeg/FFmpeg'
           ref: ${{ matrix.tag }}
           path: 'ffmpeg'
+
       - name: Build project
         id: build
         shell: pwsh
@@ -42,10 +51,12 @@ jobs:
           python3 make_compile.py --dir ffmpeg
           python3 make_universal.py --dir ffmpeg
           python3 package.py --dir ffmpeg --tag ${{ matrix.tag }}
+
       - uses: actions/upload-artifact@v2
         with:
           name: FFmpeg-${{ matrix.tag }}
           path: ${{ github.workspace }}/*.zip
+
       - name: Upload release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
