--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
       - master
+      - ci-test
     paths-ignore:
       - '**.md'
   pull_request:
@@ -18,7 +19,7 @@ jobs:
       matrix:
         include:
           - os: macos-11
-            tag: n5.0.1
+            tag: n5.0.1-test
     steps:
       - name: CleanOldArtifact
         uses: kolpav/purge-artifacts-action@v1
@@ -55,7 +56,9 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: FFmpeg-${{ matrix.tag }}
-          path: ${{ github.workspace }}/*.zip
+          path: |
+            ${{ github.workspace }}/*.zip
+            ${{ github.workspace }}/install.py
 
       - name: Upload release
         uses: softprops/action-gh-release@v1
