--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
             ${{ github.workspace }}/*.zip
             ${{ github.workspace }}/install.py
 
-      - name: Upload release
+      - name: Upload release1
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
